Bug 821775: Set mHResize & mVResize flags when doing the actual reflow of a flex item, if we did an earlier "measuring" reflow and we're now stretching the item in either or both dimensions. r=dbaron