layout/generic/nsFlexContainerFrame.cpp
@@ -263,6 +263,10 @@ public:
   bool HadMinViolation() const     { return mHadMinViolation; }
   bool HadMaxViolation() const     { return mHadMaxViolation; }
 
+  // Indicates whether this item received a preliminary "measuring" reflow
+  // before its actual reflow.
+  bool HadMeasuringReflow() const  { return mHadMeasuringReflow; }
+
   // Indicates whether this item's cross-size has been stretched (from having
   // "align-self: stretch" with an auto cross-size and no auto margins in the
   // cross axis).
@@ -396,6 +400,10 @@ public:
     mAscent = aAscent;
   }
 
+  void SetHadMeasuringReflow() {
+    mHadMeasuringReflow = true;
+  }
+
   void SetIsStretched() {
     MOZ_ASSERT(mIsFrozen, "main size should be resolved before this");
     mIsStretched = true;
@@ -446,6 +454,8 @@ protected:
   bool mHadMaxViolation;
 
   // Misc:
+  bool mHadMeasuringReflow; // Did this item get a preliminary reflow,
+                            // to measure its desired height?
   bool mIsStretched; // See IsStretched() documentation
   uint8_t mAlignSelf; // My "align-self" computed value (with "auto"
                       // swapped out for parent"s "align-items" value,
@@ -569,6 +579,12 @@ nsFlexContainerFrame::AppendFlexItemForChild(
                             nsSize(aParentReflowState.ComputedWidth(),
                                    aParentReflowState.ComputedHeight()));
 
+  // FLEX GROW & SHRINK WEIGHTS
+  // --------------------------
+  const nsStylePosition* stylePos = aChildFrame->GetStylePosition();
+  float flexGrow   = stylePos->mFlexGrow;
+  float flexShrink = stylePos->mFlexShrink;
+
   // MAIN SIZES (flex base size, min/max size)
   // -----------------------------------------
   nscoord flexBaseSize =
@@ -590,13 +606,16 @@ nsFlexContainerFrame::AppendFlexItemForChild(
   // available width.  This is the same as our "min-content" height --
   // so if we have "min-height:auto", we need to use this value as our
   // min-height.
+  bool needToMeasureMaxContentHeight = false;
   if (!IsAxisHorizontal(aAxisTracker.GetMainAxis())) {
     bool isMainSizeAuto = (NS_UNCONSTRAINEDSIZE == flexBaseSize);
     bool isMainMinSizeAuto =
       (eStyleUnit_Auto ==
        aChildFrame->GetStylePosition()->mMinHeight.GetUnit());
 
-    if (isMainSizeAuto || isMainMinSizeAuto) {
+    needToMeasureMaxContentHeight = isMainSizeAuto || isMainMinSizeAuto;
+
+    if (needToMeasureMaxContentHeight) {
       // Give the item a special reflow with "mIsFlexContainerMeasuringHeight"
       // set.  This tells it to behave as if it had "height: auto", regardless
       // of what the "height" property is actually set to.
@@ -608,6 +627,21 @@ nsFlexContainerFrame::AppendFlexItemForChild(
                                   -1, -1, false);
       childRSForMeasuringHeight.mFlags.mIsFlexContainerMeasuringHeight = true;
       childRSForMeasuringHeight.Init(aPresContext);
+
+      // If this item is flexible (vertically), or if we're measuring the
+      // 'auto' min-height and our main-size is something else, then we assume
+      // that the computed-height we're reflowing with now could be different
+      // from the one we'll use for this flex item's "actual" reflow later on.
+      // In that case, we need to be sure the flex item treats this as a
+      // vertical resize, even though none of its ancestors are necessarily
+      // being vertically resized.
+      // (Note: We don't have to do this for width, because InitResizeFlags
+      // will always turn on mHResize on when it sees that the computed width
+      // is different from current width, and that's all we need.)
+      if (flexGrow != 0.0f || flexShrink != 0.0f ||  // Are we flexible?
+          !isMainSizeAuto) {  // Are we *only* measuring this for min-height?
+        childRSForMeasuringHeight.mFlags.mVResize = true;
+      }
 
       nsHTMLReflowMetrics childDesiredSize;
       nsReflowStatus childReflowStatus;
@@ -697,11 +731,6 @@ nsFlexContainerFrame::AppendFlexItemForChild(
     }
   }
 
-  // FLEX GROW & SHRINK WEIGHTS
-  const nsStylePosition* stylePos = aChildFrame->GetStylePosition();
-  float flexGrow   = stylePos->mFlexGrow;
-  float flexShrink = stylePos->mFlexShrink;
-
   aFlexItems.AppendElement(FlexItem(aChildFrame,
                                     flexGrow, flexShrink, flexBaseSize,
                                     mainMinSize, mainMaxSize,
@@ -715,6 +744,12 @@ nsFlexContainerFrame::AppendFlexItemForChild(
   // valid size, so we freeze to keep ourselves from flexing.
   if (isFixedSizeWidget || (flexGrow == 0.0f && flexShrink == 0.0f)) {
     aFlexItems.LastElement().Freeze();
+  }
+
+  // If we did a height-measuring reflow for this flex item, make a note of
+  // that, so our "actual" reflow can set resize flags accordingly.
+  if (needToMeasureMaxContentHeight) {
+    aFlexItems.LastElement().SetHadMeasuringReflow();
   }
 
   return NS_OK;
@@ -747,6 +782,7 @@ FlexItem::FlexItem(nsIFrame* aChildFrame,
     mIsFrozen(false),
     mHadMinViolation(false),
     mHadMaxViolation(false),
+    mHadMeasuringReflow(false),
     mIsStretched(false),
     mAlignSelf(aChildFrame->GetStylePosition()->mAlignSelf)
 {
@@ -1914,7 +1950,7 @@ nsresult
 nsFlexContainerFrame::SizeItemInCrossAxis(
   nsPresContext* aPresContext,
   const FlexboxAxisTracker& aAxisTracker,
-  const nsHTMLReflowState& aChildReflowState,
+  nsHTMLReflowState& aChildReflowState,
   FlexItem& aItem)
 {
   // In vertical flexbox (with horizontal cross-axis), we can just trust the
@@ -1932,12 +1968,24 @@ nsFlexContainerFrame::SizeItemInCrossAxis(
     return NS_OK;
   }
 
+  MOZ_ASSERT(!aItem.HadMeasuringReflow(),
+             "We shouldn't need more than one measuring reflow");
+
+  if (aItem.GetAlignSelf() == NS_STYLE_ALIGN_ITEMS_STRETCH) {
+    // This item's got "align-self: stretch", so we probably imposed a
+    // stretched computed height on it during its previous reflow. We're
+    // not imposing that height for *this* measuring reflow, so we need to
+    // tell it to treat this reflow as a vertical resize (regardless of
+    // whether any of its ancestors are being resized).
+    aChildReflowState.mFlags.mVResize = true;
+  }
   nsHTMLReflowMetrics childDesiredSize;
   nsReflowStatus childReflowStatus;
   nsresult rv = ReflowChild(aItem.Frame(), aPresContext,
                             childDesiredSize, aChildReflowState,
                             0, 0, NS_FRAME_NO_MOVE_FRAME,
                             childReflowStatus);
+  aItem.SetHadMeasuringReflow();
   NS_ENSURE_SUCCESS(rv, rv);
 
   // XXXdholbert Once we do pagination / splitting, we'll need to actually
@@ -2189,11 +2237,18 @@ nsFlexContainerFrame::Reflow(nsPresContext*           aPresContext,
                                          nsSize(aReflowState.ComputedWidth(),
                                                 NS_UNCONSTRAINEDSIZE));
 
+      // Keep track of whether we've overriden the child's computed height
+      // and/or width, so we can set its resize flags accordingly.
+      bool didOverrideComputedWidth = false;
+      bool didOverrideComputedHeight = false;
+
       // Override computed main-size
       if (IsAxisHorizontal(axisTracker.GetMainAxis())) {
         childReflowState.SetComputedWidth(curItem.GetMainSize());
+        didOverrideComputedWidth = true;
       } else {
         childReflowState.SetComputedHeight(curItem.GetMainSize());
+        didOverrideComputedHeight = true;
       }
 
       // Override reflow state's computed cross-size, for stretched items.
@@ -2202,16 +2257,37 @@ nsFlexContainerFrame::Reflow(nsPresContext*           aPresContext,
                    "stretched item w/o 'align-self: stretch'?");
         if (IsAxisHorizontal(axisTracker.GetCrossAxis())) {
           childReflowState.SetComputedWidth(curItem.GetCrossSize());
+          didOverrideComputedWidth = true;
         } else {
           // If this item's height is stretched, it's a relative height.
           curItem.Frame()->AddStateBits(NS_FRAME_CONTAINS_RELATIVE_HEIGHT);
           childReflowState.SetComputedHeight(curItem.GetCrossSize());
+          didOverrideComputedHeight = true;
         }
       }
 
       // XXXdholbert Might need to actually set the correct margins in the
       // reflow state at some point, so that they can be saved on the frame for
       // UsedMarginProperty().  Maybe doesn't matter though...?
+
+      // If we're overriding the computed width or height, *and* we had an
+      // earlier "measuring" reflow, then this upcoming reflow needs to be
+      // treated as a resize.
+      if (curItem.HadMeasuringReflow()) {
+        if (didOverrideComputedWidth) {
+          // (This is somewhat redundant, since the reflow state already
+          // sets mHResize whenever our computed width has changed since the
+          // previous reflow. Still, it's nice for symmetry, and it may become
+          // necessary once we support orthogonal flows.)
+          childReflowState.mFlags.mHResize = true;
+        }
+        if (didOverrideComputedHeight) {
+          childReflowState.mFlags.mVResize = true;
+        }
+      }
+      // NOTE: Be very careful about doing anything else with childReflowState
+      // after this point, because some of its methods (e.g. SetComputedWidth)
+      // internally call InitResizeFlags and stomp on mVResize & mHResize.
 
       nscoord mainPosn = curItem.GetMainPosition();
       nscoord crossPosn = curItem.GetCrossPosition();
